Implement password gate overlay in index.html
Added a password overlay gate for data access.

--- a/index.html
+++ b/index.html
@@ -171,5 +171,16 @@
   </div>
 
   <script src="app.js"></script>
+    <!-- Gate: Password overlay -->
+  <div id="passwordGate" class="gate hidden">
+    <div class="gate__panel">
+      <h2>Contraseña</h2>
+      <p>Ingresa la contraseña para acceder al cuaderno de datos.</p>
+      <input id="passwordInput" type="password" placeholder="Contraseña" />
+      <button id="passwordSubmit" class="btn">Entrar</button>
+      <div id="passwordError" class="error"></div>
+    </div>
+  </div>
+
 </body>
 </html>
